src/objects/Dev_CheckAnswerMail_Obj__c.object
<CustomObject>
    <description>回答内容をメールで送信する際の情報を管理するオブジェクトです。
プレフィックス「CA」</description>
    <fields>
        <fullName>Dev_CA_Contents__c</fullName>
        <label>内容</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dev_CA_Reciever__c</fullName>
        <label>宛先</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Dev_CA_SendMeilFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>メール送信済フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dev_CA_Subject__c</fullName>
        <label>タイトル</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>回答内容確認メール</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Dev_CA_Subject__c</columns>
        <columns>Dev_CA_Reciever__c</columns>
        <columns>Dev_CA_SendMeilFlag__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>CA-{00000}</displayFormat>
        <label>回答内容確認メールNo</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>